<resources>
    <string name="app_name">Headline Hub</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="last_news">Last news</string>
    <string name="category">Category</string>
    <string name="saved">Saved</string>
    <string name="language">en</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="general">General</string>
    <string name="headline">Headlines</string>
    <string name="heath">Health</string>
    <string name="popular">Popular</string>
    <string name="scinece">Scinece</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="goLink">Official site ></string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="wantGoLink">Want to follow the link?</string>
    <string name="empty">No news saved</string>
    <string name="search">Search</string>
    <string name="emptyEdt">Enter text</string>
    <string name="splash1Title1">Welcome to our news app!</string>
    <string name="splash1title2">Stay updated on global events with comprehensive coverage from various countries</string>
    <string name="splash2title1">Explore the world of news with our app!</string>
    <string name="splash2title2">Get the latest news and deep insights into global events</string>
    <string name="splash3title1">Unite with our global news app!</string>
    <string name="splash3title2">Experience diverse cultures, opinions, and events from around the world</string>
    <string name="back_btn">Back</string>
    <string name="next_btn">Next</string>
    <string name="get_started">Get Started</string>
    <string name="hello">Hello</string>
    <string name="to_start">Sign up to start</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="or_continue">or continue with</string>
    <string name="login">Login</string>
    <string name="remember">Remember me</string>
    <string name="already">Already have an account?</string>
    <string name="create_acc">Create Account</string>
    <string name="e_mail" translatable="false">E-mail</string>
    <string name="inputError">Input Please</string>
    <string name="errorPassword">Min. 8 char. in password</string>
    <string name="nameError">"Min. 3 cahr "</string>
    <string name="again">Again</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="no_acc">Don\'t have an account?</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="by">By</string>
    <string name="seeall">See All</string>
    <string name="trending">Trending</string>
    <string name="lastest">Latest</string>
    <string name="key_word">Key Words</string>
    <string name="searchIn">Search In</string>
    <string name="sortBy">Sort By</string>
    <string name="inTitle">In Title</string>
    <string name="inDescription">In Description</string>
    <string name="inContent">In Content</string>
    <string name="by_relevance">By Relevance</string>
    <string name="by_popularity">By Popularity</string>
    <string name="by_date">By Date</string>
    <string name="key_relevance" translatable="false">relevance</string>
    <string name="popularity_key" translatable="false">popularity</string>
    <string name="date_key" translatable="false">publishedAt</string>
    <string name="search_by_date">Search By Date</string>
    <string name="format" translatable="false">yyyy-MM-dd</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="notifications">Notifications</string>
    <string name="theme">Theme</string>
    <string name="about_uss">Informations</string>
    <string name="logout">Logout</string>
    <string name="want_logout">Du you want to logout?</string>
    <string name="double_tap">Double tap to quit</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="path_users" translatable="false">users</string>
    <string name="success_is_edited">Edited</string>
    <string name="path_details" translatable="false">path_details</string>
    <string name="text_language">Language</string>
    <string name="eng" translatable="false">English</string>
    <string name="ru" translatable="false">Русский</string>
    <string name="system">System</string>
    <string name="SelectTheme">Select Theme Mode</string>
    <string name="choose_lang">Choose Language</string>
    <string name="theme_black">Dark Theme</string>
    <string name="white_theme">Light Theme</string>
    <string name="system_theme">System Theme</string>
    <string name="confirm">Confirm</string>
    <string name="title_dark">Dark</string>
    <string name="title_white">Light</string>
    <string name="title_system">System</string>
    <string name="path_saved" translatable="false">saved</string>
    <string name="version">Version 1.0.0</string>
    <string name="info">Headline Hub is a modern news application that delivers real-time updates and stories from around the globe. With our app, you can effortlessly stay informed about the latest events wherever you are.
        \n\n Key Features: \n\t Up-to-date News: Receive fresh news across various categories. \n\tNews Categorization: Explore topics such as politics, economy, culture, sports, and more. \n\tPersonalization: Customize your news feed based on your interests. \n\tSave Articles: Bookmark articles for offline reading. \n\tDark Mode: Support for dark theme for comfortable reading during nighttime. \n\tMultilingual Support: Choose your preferred language for news display.\n\nAdvantages: \n\t User-friendly Interface: Intuitive design for seamless navigation. \n\tHigh Speed: Quick access to news even on slow internet connections. \n\tReliable Sources: News sourced from trusted and authoritative outlets. \n\tHeadline Hub empowers you to stay up-to-date with current events and news, offering convenient and fast access to information that matters to you.</string>
    <string name="contact_us">Contact Us</string>

</resources>