<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/background_color"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.search.filtr.FilterScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:background="?selectableItemBackgroundBorderless"
            android:src="@drawable/ic_back" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:maxLines="1"
            android:id="@+id/searchEdt"
            android:backgroundTint="#8F8F8F"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/key_word" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/poppins_black"
            android:text="@string/searchIn"
            android:textColor="@color/textColor"
            android:textSize="14sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/radioGroup"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/rd_btn_selector"
                android:id="@+id/in_title"
                android:checked="true"
                android:button="@null"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:paddingHorizontal="20dp"
                android:paddingTop="3dp"
                android:text="@string/inTitle"
                android:textColor="@color/textColor"
                android:textSize="14sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/rd_btn_selector"
                android:button="@null"
                android:id="@+id/in_description"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:paddingHorizontal="20dp"
                android:paddingTop="3dp"
                android:text="@string/inDescription"
                android:textColor="@color/textColor"
                android:textSize="14sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/rd_btn_selector"
                android:button="@null"
                android:id="@+id/in_content"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:paddingHorizontal="20dp"
                android:paddingTop="3dp"
                android:text="@string/inContent"
                android:textColor="@color/textColor"
                android:textSize="14sp" />
        </RadioGroup>

        <Spinner
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:id="@+id/spinner"
            android:layout_marginHorizontal="20dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/poppins_black"
            android:text="@string/search_by_date"
            android:textColor="@color/textColor"
            android:textSize="14sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginBottom="5dp"
            android:text="@string/from"
            android:textColor="@color/textColor"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_height="50dp">
            <com.vicmikhailau.maskededittext.MaskedEditText
                android:layout_width="0dp"
                android:backgroundTint="#8F8F8F"
                android:hint="@string/format"
                app:mask="####-##-##"
                android:id="@+id/from"
                android:maxLines="1"
                android:inputType="date"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/textColor"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"/>
            <ImageButton
                android:layout_width="24dp"
                android:id="@+id/from_date_picker"
                android:layout_gravity="center"
                android:src="@drawable/ic_calendar"
                android:background="?selectableItemBackgroundBorderless"
                android:layout_height="24dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginBottom="5dp"
            android:text="@string/to"
            android:textColor="@color/textColor"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_height="50dp">
            <com.vicmikhailau.maskededittext.MaskedEditText
                android:layout_width="0dp"
                android:backgroundTint="#8F8F8F"
                android:hint="@string/format"
                android:maxLines="1"
                android:inputType="date"
                app:mask="####-##-##"
                android:layout_height="match_parent"
                android:id="@+id/to"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/textColor"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"/>
            <ImageButton
                android:layout_width="24dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_calendar"
                android:id="@+id/to_date_picker"
                android:background="?selectableItemBackgroundBorderless"
                android:layout_height="24dp"/>
        </LinearLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_back"
        android:text="@string/search"
        android:textAllCaps="false"
        android:id="@+id/search_btn"
        android:textColor="@color/white"
        android:textSize="15sp" />

</FrameLayout>