<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".presentation.profile.ProfileScreen">

    <LinearLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:orientation="vertical"
        tools:alpha="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp">

            <ImageButton
                android:id="@+id/cacnel"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="?selectableItemBackgroundBorderless"
                android:src="@drawable/ic_cancel"
                android:visibility="invisible" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/edit_profile"
                android:textColor="@color/textColor"
                android:textSize="15sp" />

            <ImageButton
                android:id="@+id/edit_btn"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="?selectableItemBackgroundBorderless"
                android:src="@drawable/ic_edit"
                android:visibility="visible" />

            <ImageButton
                android:id="@+id/confirm_btn"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="?selectableItemBackgroundBorderless"
                android:src="@drawable/ic_ok"
                android:visibility="gone" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/add_image"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iamge"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/person_placeholder"
                app:shapeAppearanceOverlay="@style/raundedImageView" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/ic_photo" />

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/username"
            android:textColor="@color/textColor"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/usernmae_edt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edt_frame"
            android:enabled="false"
            android:paddingHorizontal="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/full_name"
            android:textColor="@color/textColor"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/full_name_edt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edt_frame"
            android:enabled="false"
            android:paddingHorizontal="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/phone_number"
            android:textColor="@color/textColor"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/phone_number_edt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edt_frame"
            android:enabled="false"
            android:inputType="phone"
            android:paddingHorizontal="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/e_mail"
            android:textColor="@color/textColor"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/email_edt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edt_frame"
            android:enabled="false"
            android:paddingHorizontal="10dp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="50dp"
        tools:visibility="gone" />

</FrameLayout>